tests/script_errors/function_error_2/error.txt
Error: 
    1 | core::math::max("snot", 7)
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Bad type passed to function math::max/2